@@ -206,7 +206,7 @@ class ACT(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() in ["saturday", "sunday"]:
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
@@ -218,7 +218,7 @@ class ACT(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() == "sunday":
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
