@@ -191,7 +191,7 @@ class NT(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() in ["saturday", "sunday"]:
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
@@ -203,7 +203,7 @@ class NT(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() == "sunday":
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
