@@ -278,7 +278,7 @@ class QLD(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() in ["saturday", "sunday"]:
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
@@ -290,7 +290,7 @@ class QLD(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() == "sunday":
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
