@@ -64,7 +64,7 @@
     "type": "F"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -72,7 +72,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -80,7 +80,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -88,7 +88,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -96,7 +96,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -104,7 +104,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -112,7 +112,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
@@ -120,7 +120,7 @@
     "type": "V"
   },
   {
-    "date": "2025-01-26",
+    "date": "2025-01-27",
     "description": "Australia Day",
     "locale": "en-AU",
     "notes": "",
